force-app/main/default/objects/Implementation_Participant__c/Implementation_Participant__c.object-meta.xml
<CustomObject>
<label
  >Implementation Participant</label><pluralLabel
  >Implementation Participants</pluralLabel>
    <nameField><displayFormat>IPT-{00000000}</displayFormat><label
    >Implementation Participant Number</label><type
    >AutoNumber</type></nameField>
    <sharingModel>Private</sharingModel><externalSharingModel
  >Private</externalSharingModel><enableReports
  >true</enableReports><enableActivities>false</enableActivities><enableHistory
  >true</enableHistory>
</CustomObject>