force-app/main/default/objects/Implementation_Participant__c/fields/Responsibility_Summary__c.field-meta.xml
<CustomField>
    <fullName>Responsibility_Summary__c</fullName>
    <label>Responsibility Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>