force-app/main/default/objects/Implementation_Participant__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label
        >Active</label></value>
            <value><fullName>Inactive</fullName><default>false</default><label
        >Inactive</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>