force-app/main/default/objects/Implementation_Participant__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <label>Version Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>